app/component/route.scss
/* ... */
/*
.trip-separator:after {
  content: "";
  width: 100%;
  position: absolute;
  top: 10px;
  left: 0;
  border-top: 1px solid $light-gray;
}
*/
.trip-from,
.trip-to {
  background: #fff;
  width: 50px;
  font-size: $font-size-small;
  text-align: left;
  min-width: 3em;
  @media print {
    font-size: 21px;
    font-weight: 400;
  }
}

.trip-from {
  margin-right: 1em;
  margin-left: 0.6em;
}

.trip-to {
  margin-left: 1em;
}

.route-page-action-bar {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 15px;
  background-color: #eef1f3;

  .printable-date-container {
    display: none;
    @media print {
      display: flex;
    }

    .printable-date-icon {
      margin-right: 0.8em;
      svg {
        width: 47.3px;
        height: 42px;
      }
    }
    .printable-date-header {
      font-size: 14px;
    }
    .printable-date-content {
      font-size: 20px;
      font-weight: 700;
    }
  }
  .secondary-button.print {
    @media print {
      display: none;
    }
  }
  @media print {
    padding-left: 0;
    padding-top: 1em;
    padding-bottom: 1em;
    background-color: $white;
    border-top: 1px solid $light-gray;
    border-bottom: 1px solid $light-gray;
  }
}

.print-button-container {
  display: flex;
  button {
    margin-right: 1em;
    margin-left: auto;
    margin-bottom: $padding-medium;
  }
}

.mobile .route-page-action-bar .secondary-button {
  display: none;
}

.route-schedule-date {
  @include font-book;
  @media print {
    display: none;
  }

  min-height: $route-schedule-date-height;
  margin: 0;

  .icon {
    margin-right: 7px;
    width: 18px;
    height: 18px;
    color: $gray-blue;
    vertical-align: middle;
  }

  select {
    font-size: 9pt;
    line-height: 18px;
    height: 19px;

    color: $primary-color;
    border-bottom: none !important;
    font-weight: 500;
    padding: 0;
    text-transform: uppercase;
    background-image: none;
    width: 7em;
    text-align: left;
    appearance: none;

    &:hover {
      background: none;
    }

    option {
      padding: 4px;
    }
  }
}
.route-container {
  background-color: white;
  padding: 1em $margin-left-right 0;
  border-radius: 15px 15px 0 0;
  box-shadow: 0 -5px 5px 0 rgba(0, 0, 0, 0.2);
  &.bp-large {
    padding: 0 $margin-left-right-large 1.5em;
  }
  .back-button {
    position: absolute;
    left: 1.5em;
    top: 1.6em;
  }
}

.navigation-tabs {
  width: 100%;
}
// Tabs
.route-tabs {
  height: 2.5em;
  display: flex;
  background-color: $light-gray;
  margin: 1.25em 0 2em 0;
  border: 2px solid $light-gray;
  border-radius: 3px;
  a {
    width: calc(100% / 3);
    padding-top: 0.45em;
    text-align: center;
    letter-spacing: -0.42px;
    border-radius: 3px;
    color: #333;
    font-weight: normal;
    &.is-active {
      font-weight: 500;
      background-color: $white;
    }
  }

  .tab-panel {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    background: white;
    > div {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
    }
  }
}

.fpccontainer > div > div > div.spinner-loader {
  top: 15%;
}

.mode-nearby {
  &.btn {
    background-color: white;
    .icon {
      color: #79919d;
    }
  }
}

.route-pattern-select {
  height: 2.5em;
  position: relative;
  .route-option {
    background: $white;
    font-size: $font-size-xsmall;
    font-weight: normal;
  }
  #select-route-pattern {
    cursor: pointer;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-image: none;
  }

  button.toggle-direction,
  button.toggle-direction:hover {
    background: $white;
    padding: 0;
    position: absolute;
    top: 0.6em;
    right: 0.9em;
    display: block;
    cursor: pointer;
    pointer-events: all;
    font-size: 1.15em;
    .icon {
      color: $link-color;
      position: static;
    }
  }

  button.toggle-direction:hover .icon {
    color: #0062a1;
  }

  .route-option option {
    margin-top: 0.4em;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.75);
    cursor: pointer;
  }

  .route-option-togglable {
    margin-top: 0.4em;
    overflow: hidden;
    line-height: 1.2;
    padding-top: 0.4em;
  }

  select,
  .route-option {
    padding: 0 35px 0 10px;
    -webkit-padding-end: 35px;
    -webkit-padding-start: 10px;
    @include font-medium;
    height: 2.5rem;
    border-radius: 5px;
    border: 1px solid #888;
    appearance: none;

    option {
      max-height: 1.4em;
      overflow: hidden;
    }

    &:focus {
      outline: none;
      border: 1px solid #888;
    }
    @media print {
      border: 0;
      padding-left: 0;
    }
  }
  .icon {
    color: $gray-blue;
    position: absolute;
    right: 1rem;
    top: 0.8rem;
    pointer-events: none;
    @media print {
      display: none;
    }
  }

  &.bp-large {
    @media print {
      padding-left: 0;
    }

    .route-option option {
      font-size: 18px;
      margin-top: 0.5em;
    }

    select,
    .route-option {
      font-size: $font-size-small;
      font-weight: normal;
      padding: 0 48px 0 20px;
      -webkit-padding-end: 48px;
      -webkit-padding-start: 20px;
      @media print {
        padding-left: 0;
      }
    }
  }
}
/* ... */

